--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -86,6 +86,114 @@
     "\n",
     "***"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2\n",
+    "\n",
+    "> Give an overview of the famous penguins data set, explaining \n",
+    "the types of variables it contains. Suggest the types of variables\n",
+    "that should be used to model them in Python, explaining your\n",
+    "rationale."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 3\n",
+    "\n",
+    "> For each of the variables in the penguins data set, suggest what \n",
+    "probability distribution from the numpy random distributions list \n",
+    "is the most appropriate to model the variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 4\n",
+    "\n",
+    "> Suppose you are flipping two coins, each with a probability $p$ of\n",
+    "giving heads. Plot the entropy of the total number of heads versus\n",
+    "$p$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 5\n",
+    "\n",
+    "> Create an appropriate individual plot for each of the variables in\n",
+    "the penguin data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End \n",
+    "\n",
+    "***\n"
+   ]
   }
  ],
  "metadata": {
