--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,13 +43,14 @@
     "    # if x is even, devide it by two.\n",
     "    if x % 2 == 0:\n",
     "        return x // 2\n",
+    "    # if x is not even, multiply by three and add one.\n",
     "    else:\n",
     "        return (x * 3) + 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,20 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Collatz with initial value 100\n",
-      "50, 25, 76, 38, 19, 58, 29, 88, 44, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, "
+      "Testing Collatz with initial value 10000\n",
+      "5000, 2500, 1250, 625, 1876, 938, 469, 1408, 704, 352, 176, 88, 44, 22, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, "
      ]
     }
    ],
    "source": [
-    "collatz(100)\n"
+    "collatz(10000)\n"
    ]
   },
   {
