overview of the dataset

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# End\n",
+    "\n",
     "\n",
     "***"
    ]
@@ -98,6 +98,38 @@
     "the types of variables it contains. Suggest the types of variables\n",
     "that should be used to model them in Python, explaining your\n",
     "rationale."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overview of the Palmer Penguins Dataset\n",
+    ">https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv\n",
+    ">https://github.com/allisonhorst/palmerpenguins/blob/main/README.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Palmer Penguins dataset is a popular dataset in the field of data science and is often used for practicing data analysis and machine learning tasks. It was collected and introduced  by Dr. Kristen Gorman and the Palmer Station, Antarctica LTER, a member of the Long Term Ecological Research Network. The dataset is a well-structured collection of measurements for three species of penguins collected from three islands in the Palmer Archipelago  in the Antarctic.\n",
+    "Three different species of penguins in the Palmer Penguins dataset are: Adelie, Chinstrap, and Gentoo. \n",
+    "The variables in this dataset include the following variables:\n",
+    "\n",
+    "**Species:** Categorical variable indicating the species of the penguin. The three species are Adelie,     Chinstrap, and Gentoo.\n",
+    "\n",
+    "**Island:** Categorical variable indicating the island where the penguin was observed. The three islands are Biscoe, Dream, and Torgersen.\n",
+    "\n",
+    "**Bill Length:** Numeric variable representing the length of the penguin's bill in millimeters.\n",
+    "\n",
+    "**Bill Depth:** Numeric variable representing the depth of the penguin's bill in millimeters.\n",
+    "\n",
+    "**Flipper Length:** Numeric variable representing the length of the penguin's flipper in millimeters.\n",
+    "\n",
+    "**Body Mass:** Numeric variable representing the body mass of the penguin in grams.\n",
+    "\n",
+    "**Sex:** Categorical variable indicating the gender of the penguin.\n"
    ]
   },
   {
