text added to task 3

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -133,17 +133,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Suggestion on the types of variables ####\n",
+    "\n",
+    "NumPy is a powerful library in Python for numerical and mathematical operations. It is efficient for numerical computations. For example, we can use it to determine which island has penguins with the longest flippers and model it in Python. Additionally, we can investigate if body mass affects the length of the flipper. For instance, we may want to find out whether penguins with greater body mass have longer flippers."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# End\n",
+    "\n",
     "\n",
     "***"
    ]
@@ -160,17 +162,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "To model variables **Bill Lenght**, **Bill Depth**, **Flipper Length** and **Body Mass** the Normal Distribution (numpy.random.normal) is the most appropriate.\n",
+    "\n",
+    "To model variables **Species**, **Sex**  and **Island** the Categorical Distribution (numpy.random.choice) can be used."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# End\n",
+    "\n",
     "\n",
     "***"
    ]
