--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,15 @@
    "source": [
     "### Overview of the Palmer Penguins Dataset\n",
     ">https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv\n",
+    "\n",
     ">https://github.com/allisonhorst/palmerpenguins/blob/main/README.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Palmer Penguins](https://allisonhorst.github.io/palmerpenguins/reference/figures/palmerpenguins.png)"
    ]
   },
   {
@@ -200,8 +208,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# End\n",
+    "\n",
     "\n",
     "***"
    ]
@@ -218,10 +231,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>3250.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>46.8</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>4850.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>341</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>50.4</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>5750.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>45.2</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>212.0</td>\n",
+       "      <td>5200.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>49.9</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>213.0</td>\n",
+       "      <td>5400.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>344 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0    Adelie  Torgersen            39.1           18.7              181.0   \n",
+       "1    Adelie  Torgersen            39.5           17.4              186.0   \n",
+       "2    Adelie  Torgersen            40.3           18.0              195.0   \n",
+       "3    Adelie  Torgersen             NaN            NaN                NaN   \n",
+       "4    Adelie  Torgersen            36.7           19.3              193.0   \n",
+       "..      ...        ...             ...            ...                ...   \n",
+       "339  Gentoo     Biscoe             NaN            NaN                NaN   \n",
+       "340  Gentoo     Biscoe            46.8           14.3              215.0   \n",
+       "341  Gentoo     Biscoe            50.4           15.7              222.0   \n",
+       "342  Gentoo     Biscoe            45.2           14.8              212.0   \n",
+       "343  Gentoo     Biscoe            49.9           16.1              213.0   \n",
+       "\n",
+       "     body_mass_g     sex  \n",
+       "0         3750.0    MALE  \n",
+       "1         3800.0  FEMALE  \n",
+       "2         3250.0  FEMALE  \n",
+       "3            NaN     NaN  \n",
+       "4         3450.0  FEMALE  \n",
+       "..           ...     ...  \n",
+       "339          NaN     NaN  \n",
+       "340       4850.0  FEMALE  \n",
+       "341       5750.0    MALE  \n",
+       "342       5200.0  FEMALE  \n",
+       "343       5400.0    MALE  \n",
+       "\n",
+       "[344 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_csv(\"https://raw.githubusercontent.com/mwaskom/seaborn-data/master/penguins.csv\")\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<seaborn.axisgrid.PairGrid at 0x7fe0f4a02fd0>"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "sns.pairplot(df)"
+   ]
   },
   {
    "cell_type": "markdown",
