--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -206,6 +206,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importing libraries for ploting\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -221,9 +232,7 @@
     }
    ],
    "source": [
-    "#importing libraries for ploting\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "\n",
     "#this function calculates the entropy, using formula for enthropy\n",
     "def entropy(p):\n",
     "    if p == 0 or p == 1:\n",
@@ -267,7 +276,9 @@
     "\n",
     ">https://docs.wradlib.org/en/stable/notebooks/python/mplintro.html\n",
     "\n",
-    ">https://vlegalwaymayo.atu.ie/course/view.php?id=8876"
+    ">https://vlegalwaymayo.atu.ie/course/view.php?id=8876\n",
+    "\n",
+    "https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv\n"
    ]
   },
   {
@@ -276,6 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing libraries\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
