some work/research done

--- a/project.ipynb
+++ b/project.ipynb
@@ -16,7 +16,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">http://www.lac.inpe.br/~rafael.santos/Docs/CAP394/WholeStory-Iris.html"
+    ">• The project is to create a notebook exploring classification algorithms applied on the iris flower data set associated with Ronald\n",
+    "A Fisher.\n",
+    "\n",
+    ">• In your notebook, you should first explain what supervised learning is and then explain what classification algorithms are.\n",
+    "\n",
+    ">• Describe at least one common classification algorithm and implement it using the scikit-learn Python library.\n",
+    "\n",
+    ">• Throughout your notebook, use appropriate plots, mathematical\n",
+    "notation, and diagrams to explain the relevant concepts."
    ]
   },
   {
@@ -190,6 +198,18 @@
    "source": [
     "df=pd.read_csv(\"https://raw.githubusercontent.com/mwaskom/seaborn-data/master/iris.csv\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### References\n",
+    "http://www.lac.inpe.br/~rafael.santos/Docs/CAP394/WholeStory-Iris.html\n",
+    "\n",
+    "https://raw.githubusercontent.com/mwaskom/seaborn-data/master/iris.csv\n",
+    "\n",
+    "http://archive.ics.uci.edu/ml/datasets/Iris\n"
    ]
   },
   {
