overview of dataset added

--- a/project.ipynb
+++ b/project.ipynb
@@ -16,15 +16,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">• The project is to create a notebook exploring classification algorithms applied on the iris flower data set associated with Ronald\n",
-    "A Fisher.\n",
+    ">• The project is to create a notebook investigating the variables and\n",
+    "data points within the well-known iris flower data set associated\n",
+    "with Ronald A Fisher.\n",
     "\n",
-    ">• In your notebook, you should first explain what supervised learning is and then explain what classification algorithms are.\n",
+    ">• In the notebook, you should discuss the classification of each\n",
+    "variable within the data set according to common variable types\n",
+    "and scales of measurement in mathematics, statistics, and Python.\n",
     "\n",
-    ">• Describe at least one common classification algorithm and implement it using the scikit-learn Python library.\n",
+    ">• Select, demonstrate, and explain the most appropriate summary\n",
+    "statistics to describe each variable.\n",
     "\n",
-    ">• Throughout your notebook, use appropriate plots, mathematical\n",
-    "notation, and diagrams to explain the relevant concepts."
+    ">• Select, demonstrate, and explain the most appropriate plot(s) for\n",
+    "each variable.\n",
+    "\n",
+    ">• The notebook should follow a cohesive narrative about the data\n",
+    "set."
    ]
   },
   {
@@ -32,6 +39,25 @@
    "metadata": {},
    "source": [
     "![Iris Dataset](https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Machine+Learning+R/iris-machinelearning.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Overview of Fisher's Iris Dataset\n",
+    "\n",
+    "The Iris dataset is a popular dataset in the field of machine learning and statistics. It was introduced by the British biologist and statistician Sir Ronald A. Fisher in 1936.  The dataset is based on a study where measurements were taken from three species of iris flowers: setosa, versicolor, and virginica. There are four features (attributes) measured for each flower:\n",
+    "* Sepal length (in cm)\n",
+    "* Sepal width (in cm)\n",
+    "* Petal length (in cm)\n",
+    "* Petal width (in cm)\n",
+    "There are three classes:\n",
+    "* Iris setosa\n",
+    "* Iris versicolor\n",
+    "* Iris virginica\n",
+    "\n",
+    "There are typically 150 instances in the dataset, with 50 instances for each of the three species. The Iris dataset has become a classic example in the field and is frequently used in tutorials and educational materials for introducing concepts of machine learning and data analysis."
    ]
   },
   {
@@ -209,7 +235,10 @@
     "\n",
     "https://raw.githubusercontent.com/mwaskom/seaborn-data/master/iris.csv\n",
     "\n",
-    "http://archive.ics.uci.edu/ml/datasets/Iris\n"
+    "http://archive.ics.uci.edu/ml/datasets/Iris\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Iris_flower_data_set\n",
+    "\n"
    ]
   },
   {
