some corrections done to the task2

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -143,7 +143,18 @@
    "source": [
     "#### Suggestion on the types of variables ####\n",
     "\n",
-    "NumPy is a powerful library in Python for numerical and mathematical operations. It is efficient for numerical computations. For example, we can use it to determine which island has penguins with the longest flippers and model it in Python. Additionally, we can investigate if body mass affects the length of the flipper. For instance, we may want to find out whether penguins with greater body mass have longer flippers."
+    "**Categorical Variables:**\n",
+    "\n",
+    "Species and Island are categorical variables that represent the species of the penguin and the island on which the penguins were observed. They can be modeled using the Python str type or NumPy's numpy.str_ type.\n",
+    "\n",
+    "**Numerical Variables:**\n",
+    "\n",
+    "\n",
+    "Bill Length (mm), Bill Depth (mm), Flipper Length (mm), Body Mass (g), variables represent physical measurements and are continuous numerical variables. They can be modeled using Python's float type or NumPy's numpy.float64 type.\n",
+    "\n",
+    "**Boolean Variables:**\n",
+    "\n",
+    "Sex variable represents the gender of the penguin and is categorical with two levels: Male or Female. It can be modeled using Python's str type or NumPy's numpy.str_ type, or even using a custom encoding with boolean values."
    ]
   },
   {
@@ -154,7 +165,13 @@
     "\n",
     "https://github.com/mwaskom/seaborn-data/blob/master/penguins.csv\n",
     "\n",
-    "https://github.com/allisonhorst/palmerpenguins/blob/main/README.md"
+    "https://github.com/allisonhorst/palmerpenguins/blob/main/README.md\n",
+    "\n",
+    "https://numpy.org/doc/stable/user/basics.types.html\n",
+    "\n",
+    "https://docs.python.org/3/library/stdtypes.html\n",
+    "\n",
+    "https://realpython.com/python-data-types/\n"
    ]
   },
   {
