graphs added for visualisation

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importing libraries for ploting\n",
+    "# Importing libraries for ploting.\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
    ]
@@ -264,7 +264,7 @@
     "# Calculating entropy for each probability value using the entropy function.\n",
     "entropy_values = [entropy(p) for p in p_values]\n",
     "\n",
-    "#ploting\n",
+    "# Ploting.\n",
     "plt.plot(p_values, entropy_values)\n",
     "plt.xlabel('Probability of Heads (p)')\n",
     "plt.ylabel('Entropy (bits)')\n",
@@ -313,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing libraries\n",
+    "# Importing libraries.\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -507,7 +507,7 @@
     }
    ],
    "source": [
-    "#geting data from CSV\n",
+    "# Geting data from CSV.\n",
     "df=pd.read_csv(\"https://raw.githubusercontent.com/mwaskom/seaborn-data/master/penguins.csv\")\n",
     "\n",
     "df"
@@ -654,7 +654,7 @@
     }
    ],
    "source": [
-    "#creating plots\n",
+    "# Creating plots.\n",
     "sns.pairplot(df)"
    ]
   },
@@ -685,9 +685,9 @@
     }
    ],
    "source": [
-    "#turn on inline ploting\n",
+    "# Turning inline ploting on.\n",
     "%matplotlib inline\n",
-    "#adding color to the plots\n",
+    "# Adding color to the plots.\n",
     "sns.pairplot(data=df, hue='species')"
    ]
   },
