comments added to the code

--- a/project.ipynb
+++ b/project.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,6 +226,30 @@
     "# Geting data from CSV.\n",
     "df=pd.read_csv(\"https://raw.githubusercontent.com/mwaskom/seaborn-data/master/iris.csv\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frequency Counts for Species:\n",
+      " setosa        50\n",
+      "versicolor    50\n",
+      "virginica     50\n",
+      "Name: species, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Counting the frequency of each species in the dataset.\n",
+    "species_counts = df['species'].value_counts()\n",
+    "\n",
+    "print(\"Frequency Counts for Species:\\n\", species_counts)"
    ]
   },
   {
@@ -1668,6 +1692,7 @@
     }
    ],
    "source": [
+    "# Creating plots setosa.\n",
     "sns.pairplot(df.loc[df.loc[:,'species'] == 'setosa'])"
    ]
   },
@@ -1698,6 +1723,7 @@
     }
    ],
    "source": [
+    "# Adding color to the plots.\n",
     "sns.pairplot(df.loc[df.loc[:,'species'] == 'setosa'], hue='sepal_length')"
    ]
   },
@@ -2229,6 +2255,7 @@
     }
    ],
    "source": [
+    "# Creating plots for versicolor.\n",
     "sns.pairplot(df.loc[df.loc[:,'species'] == 'versicolor'])"
    ]
   },
@@ -2259,6 +2286,7 @@
     }
    ],
    "source": [
+    "# Adding color to the plots.\n",
     "sns.pairplot(df.loc[df.loc[:,'species'] == 'versicolor'], hue='sepal_length')"
    ]
   },
@@ -2790,6 +2818,7 @@
     }
    ],
    "source": [
+    "# Creating plots for virginica.\n",
     "sns.pairplot(df.loc[df.loc[:,'species'] == 'virginica'])"
    ]
   },
@@ -2820,6 +2849,7 @@
     }
    ],
    "source": [
+    "# Adding color to the plots.\n",
     "sns.pairplot(df.loc[df.loc[:,'species'] == 'virginica'], hue='sepal_length')"
    ]
   },
@@ -2892,6 +2922,8 @@
     "#### References\n",
     "\n",
     "http://www.lac.inpe.br/~rafael.santos/Docs/CAP394/WholeStory-Iris.html\n",
+    "\n",
+    "https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Machine+Learning+R/iris-machinelearning.png\n",
     "\n",
     "https://raw.githubusercontent.com/mwaskom/seaborn-data/master/iris.csv\n",
     "\n",
