description of vars and conclution adeed

--- a/project.ipynb
+++ b/project.ipynb
@@ -16,6 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Task\n",
+    "\n",
     ">• The project is to create a notebook investigating the variables and\n",
     "data points within the well-known iris flower data set associated\n",
     "with Ronald A Fisher.\n",
@@ -58,6 +60,47 @@
     "* Iris virginica\n",
     "\n",
     "There are typically 150 instances in the dataset, with 50 instances for each of the three species. The Iris dataset has become a classic example in the field and is frequently used in tutorials and educational materials for introducing concepts of machine learning and data analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Variables\n",
+    "\n",
+    "**Species**\n",
+    "*Type: Categorical Variable.\n",
+    "\n",
+    "* Scale of Measurement: Nominal Scale.\n",
+    "\n",
+    "The dataset includes three species: Iris setosa, Iris versicolor, and Iris virginica.\n",
+    "\n",
+    "The dataset is balanced, with each species represented by an equal number of instances (50).\n",
+    "\n",
+    "* Relation to Other Variables: Each species exhibits unique patterns in its sepal and petal measurements. For instance, Iris setosa is characterised by smaller petals, a distinct feature for classification.\n",
+    "\n",
+    "**Sepal Length, Sepal Width, Petal Length, Petal Width**\n",
+    "\n",
+    "* Type: Continuous Variable.\n",
+    "* Scale of Measurement: Ratio Scale.\n",
+    "\n",
+    "Sepal Length,Sepal Width, Petal Length, Petal Width are numerical measurement which measured in units. \n",
+    "Correlations between petal length and width, as well as sepal dimensions, are evident and can be used to distinguish between species.\n",
+    "\n",
+    "**Summary**\n",
+    "\n",
+    "* Continuous Variables: Sepal Length, Sepal Width, Petal Length, Petal Width. These are all ratio scale measurements because they are quantitative measurements with meaningful zero points.\n",
+    "\n",
+    "* Categorical Variable: Species. This is a nominal scale measurement as it categorises data without any order or ranking.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis of Fisher's Iris Dataset"
    ]
   },
   {
@@ -2919,6 +2962,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Conclusion\n",
+    "\n",
+    "The analysis of the Iris dataset has yielded valuable insights into the physical characteristics of Iris flowers. Through careful examination of both the continuous variables (sepal length, sepal width, petal length, and petal width) and the categorical variable (species), significant patterns and relationships distinguishing the three species - Iris setosa, Iris versicolor, and Iris virginica - were uncovered.\n",
+    "\n",
+    "The findings from the analysis include distinct size variations in petals and sepals among the species, with notable differences in average measurements. A notable correlation was observed between petal length and width. Additionally, the balanced representation of each species in the dataset provides a solid foundation for analysis.\n",
+    "\n",
+    "The Fisher Iris dataset serves as an exemplary model for classification tasks, demonstrating how quantitative measurements can effectively categorise and differentiate between closely related species.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### References\n",
     "\n",
     "http://www.lac.inpe.br/~rafael.santos/Docs/CAP394/WholeStory-Iris.html\n",
@@ -2930,6 +2986,8 @@
     "http://archive.ics.uci.edu/ml/datasets/Iris\n",
     "\n",
     "https://en.wikipedia.org/wiki/Iris_flower_data_set\n",
+    "\n",
+    "https://www.simplilearn.com/what-is-nominal-data-article\n",
     "\n",
     "https://pandas.pydata.org/docs/user_guide/index.html\n",
     "\n",
